add experimental support for tls

--- a/matchbox_server/Cargo.toml
+++ b/matchbox_server/Cargo.toml
@@ -7,10 +7,10 @@ description = "A signaling server for WebRTC peer-to-peer full-mesh networking"
 license = "MIT OR Apache-2.0"
 keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
 categories = [
-  "network-programming",
-  "game-development",
-  "wasm",
-  "web-programming",
+    "network-programming",
+    "game-development",
+    "wasm",
+    "web-programming",
 ]
 repository = "https://github.com/johanhelsing/matchbox"
 homepage = "https://github.com/johanhelsing/matchbox"
@@ -18,9 +18,10 @@ readme = "../README.md"
 
 [dependencies]
 matchbox_protocol = { path = "../matchbox_protocol", version = "0.6", features = [
-  "json",
+    "json",
 ] }
 axum = { version = "0.6", features = ["ws"] }
+axum-server = { version = "0.5", features = ["tls-rustls"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.4", features = ["cors", "trace"] }
